# ascii-vision

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: algorithm.md  architecture.md  developer.md  gui.md  requirements.md  roadmap.md  vision.md
openspec/specs/cli-entry-point/: spec.md
openspec/specs/config-manager/: spec.md
openspec/specs/conversion-engine/: spec.md
openspec/specs/export-manager/: spec.md
openspec/specs/frame-provider/: spec.md
openspec/specs/gui-application/: spec.md
openspec/specs/metrics-evaluation/: spec.md
openspec/specs/video-exporter/: spec.md
openspec/specs/webcam-preview/: spec.md
spec/: .gitkeep
src/ascii_vision/: __init__.py  __main__.py  cli.py  config.py  config_schema.json  engine.py  exporter.py  frame_provider.py  glyph_cache.py  metrics.py  video_exporter.py
src/ascii_vision_gui/: __init__.py  app.py  main_window.py  rendering.py  style.py  widgets.py  worker.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_engine.py  test_export_manager.py  test_frame_provider.py  test_gui_imports.py  test_gui_smoke.py  test_integration.py  test_video_exporter.py  test_worker.py
