[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-vision"
version = "0.1.0"
description = "A high-performance decoupled ASCII art converter and GUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ascii_vision", "ascii_vision_gui"]
